[gd_scene load_steps=13 format=3 uid="uid://bwuexw3t61b0h"]

[ext_resource type="Texture2D" uid="uid://cd5efxrlqcru1" path="res://assets/top_bar/top_bar_full.png" id="1_1kdsi"]
[ext_resource type="Script" path="res://scences/ui/top_bar.gd" id="2_6htc6"]
[ext_resource type="Texture2D" uid="uid://do1aa6n7ws33d" path="res://assets/cog_v3.png" id="2_m2ekw"]
[ext_resource type="AudioStream" uid="uid://b1vpjjmi5cj3n" path="res://assets/SFX/axe.ogg" id="3_0dl4k"]
[ext_resource type="PackedScene" uid="uid://bijq7mf8h0j85" path="res://scences/ui/tooltip.tscn" id="4_3gj2d"]
[ext_resource type="PackedScene" uid="uid://cmrvm435qcold" path="res://scences/ui/card_pile_button.tscn" id="4_gewq0"]
[ext_resource type="Texture2D" uid="uid://7p8kjadn847c" path="res://assets/cards/deck.png" id="5_4418h"]
[ext_resource type="PackedScene" uid="uid://da7tuwoqikc3r" path="res://scences/ui/gold_ui.tscn" id="5_y82xe"]
[ext_resource type="PackedScene" uid="uid://hqt3nv2gge3l" path="res://scences/ui/card_pile_view.tscn" id="7_dqec3"]

[sub_resource type="LabelSettings" id="LabelSettings_dr0uj"]

[sub_resource type="LabelSettings" id="LabelSettings_as8hc"]
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_kiq6t"]
font_size = 6

[node name="TopBar" type="TextureRect"]
modulate = Color(0.737255, 0.737255, 0.737255, 1)
offset_right = 334.0
offset_bottom = 20.0
texture = ExtResource("1_1kdsi")
expand_mode = 1
stretch_mode = 2
script = ExtResource("2_6htc6")
sfx_slider_sound = ExtResource("3_0dl4k")

[node name="ColorRect" type="ColorRect" parent="."]
unique_name_in_owner = true
process_mode = 3
layout_mode = 0
offset_left = -3.0
offset_top = -4.0
offset_right = 337.0
offset_bottom = 191.0
mouse_filter = 1
color = Color(0, 0, 0, 0.470588)

[node name="SettingsLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="Settings" type="Panel" parent="SettingsLayer"]
unique_name_in_owner = true
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -75.0
offset_right = 125.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsLayer/Settings"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 4.0
offset_bottom = 37.0
grow_horizontal = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="SettingsLayer/Settings/VBoxContainer"]
layout_mode = 2
text = "Settings"
label_settings = SubResource("LabelSettings_dr0uj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsLayer/Settings/VBoxContainer"]
layout_mode = 2

[node name="Gameplay" type="VBoxContainer" parent="SettingsLayer/Settings/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Gameplay"]
layout_mode = 2
text = "Gameplay"
label_settings = SubResource("LabelSettings_as8hc")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Gameplay"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Gameplay/HBoxContainer"]
custom_minimum_size = Vector2(62, 0)
layout_mode = 2
text = "  True draw amount"
label_settings = SubResource("LabelSettings_kiq6t")
horizontal_alignment = 1

[node name="TrueDrawButton" type="Button" parent="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Gameplay/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "Disabled"

[node name="HBoxContainer4" type="HBoxContainer" parent="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Gameplay"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Gameplay/HBoxContainer4"]
custom_minimum_size = Vector2(62, 0)
layout_mode = 2
text = "  True deck size"
label_settings = SubResource("LabelSettings_kiq6t")
horizontal_alignment = 1

[node name="TrueDeckButton" type="Button" parent="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Gameplay/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "Disabled"

[node name="HBoxContainer2" type="HBoxContainer" parent="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Gameplay"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Gameplay/HBoxContainer2"]
custom_minimum_size = Vector2(62, 0)
layout_mode = 2
text = "  Gameplay hints"
label_settings = SubResource("LabelSettings_kiq6t")
horizontal_alignment = 1

[node name="HintsButton" type="Button" parent="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Gameplay/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "Enabled"

[node name="HBoxContainer3" type="HBoxContainer" parent="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Gameplay"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Gameplay/HBoxContainer3"]
custom_minimum_size = Vector2(62, 0)
layout_mode = 2
text = "  Card pile position"
label_settings = SubResource("LabelSettings_kiq6t")
horizontal_alignment = 1

[node name="PileButton" type="Button" parent="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Gameplay/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "Outside"

[node name="Audio & Visual" type="VBoxContainer" parent="SettingsLayer/Settings/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Audio & Visual"]
layout_mode = 2
text = "Audio + Visual
"
label_settings = SubResource("LabelSettings_as8hc")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Audio & Visual"]
layout_mode = 2
size_flags_horizontal = 0
alignment = 1

[node name="Label" type="Label" parent="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Audio & Visual/HBoxContainer"]
custom_minimum_size = Vector2(62, 0)
layout_mode = 2
text = "Master voume"
label_settings = SubResource("LabelSettings_kiq6t")
horizontal_alignment = 1

[node name="MasterVolume" type="HSlider" parent="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Audio & Visual/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
value = 100.0
rounded = true
ticks_on_borders = true

[node name="HBoxContainer2" type="HBoxContainer" parent="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Audio & Visual"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Audio & Visual/HBoxContainer2"]
custom_minimum_size = Vector2(62, 0)
layout_mode = 2
text = "SFX voume"
label_settings = SubResource("LabelSettings_kiq6t")
horizontal_alignment = 1

[node name="SFXVolume" type="HSlider" parent="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Audio & Visual/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
max_value = 32.0
value = 32.0
rounded = true
ticks_on_borders = true

[node name="HBoxContainer3" type="HBoxContainer" parent="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Audio & Visual"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Audio & Visual/HBoxContainer3"]
custom_minimum_size = Vector2(62, 0)
layout_mode = 2
text = "Music voume"
label_settings = SubResource("LabelSettings_kiq6t")
horizontal_alignment = 1

[node name="MusicVolume" type="HSlider" parent="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Audio & Visual/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
max_value = 32.0
rounded = true
ticks_on_borders = true

[node name="HBoxContainer4" type="HBoxContainer" parent="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Audio & Visual"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Audio & Visual/HBoxContainer4"]
custom_minimum_size = Vector2(62, 0)
layout_mode = 2
text = "Fullscreen"
label_settings = SubResource("LabelSettings_kiq6t")
horizontal_alignment = 1

[node name="FullscreenButton" type="Button" parent="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Audio & Visual/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "Disabled"

[node name="SettingsTooltip" parent="SettingsLayer" instance=ExtResource("4_3gj2d")]
unique_name_in_owner = true
offset_left = -68.0
offset_top = -8.0
offset_right = 82.0
offset_bottom = 28.0

[node name="TopBarHbox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 5.0
offset_right = -7.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4
alignment = 2

[node name="GoldUI" parent="TopBarHbox" instance=ExtResource("5_y82xe")]
unique_name_in_owner = true
layout_mode = 2

[node name="Counter" type="Label" parent="TopBarHbox"]
unique_name_in_owner = true
layout_mode = 2
text = "99"
horizontal_alignment = 1

[node name="DeckButton" parent="TopBarHbox" node_paths=PackedStringArray("counter") instance=ExtResource("4_gewq0")]
unique_name_in_owner = true
custom_minimum_size = Vector2(12, 14)
layout_mode = 2
texture_normal = ExtResource("5_4418h")
counter = NodePath("../Counter")

[node name="Cog" type="TextureRect" parent="TopBarHbox"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
texture = ExtResource("2_m2ekw")
expand_mode = 1
stretch_mode = 5

[node name="DeckViewLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="DeckView" parent="DeckViewLayer" instance=ExtResource("7_dqec3")]
unique_name_in_owner = true
visible = false

[connection signal="gui_input" from="ColorRect" to="." method="_on_color_rect_gui_input"]
[connection signal="gui_input" from="SettingsLayer/Settings" to="." method="_on_settings_gui_input"]
[connection signal="toggled" from="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Gameplay/HBoxContainer/TrueDrawButton" to="." method="_on_true_draw_button_toggled"]
[connection signal="toggled" from="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Gameplay/HBoxContainer4/TrueDeckButton" to="." method="_on_true_deck_button_toggled"]
[connection signal="mouse_entered" from="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Gameplay/HBoxContainer2" to="." method="_on_h_box_container_2_mouse_entered"]
[connection signal="toggled" from="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Gameplay/HBoxContainer2/HintsButton" to="." method="_on_hints_button_toggled"]
[connection signal="toggled" from="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Gameplay/HBoxContainer3/PileButton" to="." method="_on_pile_button_toggled"]
[connection signal="drag_ended" from="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Audio & Visual/HBoxContainer/MasterVolume" to="." method="_on_sfx_volume_drag_ended"]
[connection signal="value_changed" from="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Audio & Visual/HBoxContainer/MasterVolume" to="." method="_on_sfx_volume_value_changed"]
[connection signal="drag_ended" from="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Audio & Visual/HBoxContainer2/SFXVolume" to="." method="_on_sfx_volume_drag_ended"]
[connection signal="value_changed" from="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Audio & Visual/HBoxContainer2/SFXVolume" to="." method="_on_sfx_volume_value_changed"]
[connection signal="value_changed" from="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Audio & Visual/HBoxContainer3/MusicVolume" to="." method="_on_music_volume_value_changed"]
[connection signal="toggled" from="SettingsLayer/Settings/VBoxContainer/HBoxContainer/Audio & Visual/HBoxContainer4/FullscreenButton" to="." method="_on_fullscreen_button_toggled"]
[connection signal="gui_input" from="TopBarHbox/Cog" to="." method="_on_cog_gui_input"]
